# osgearth

./: bootstrap-vcpkg.bat
src/: CMakeLists.txt
src/applications/: CMakeLists.txt
src/applications/osgearth_cubemap/: CMakeLists.txt  EnvironmentMap.cpp  EnvironmentMap.h  osgearth_cubemap.cpp
src/applications/osgearth_imgui/: osgearth_imgui.cpp
src/applications/osgearth_pbrdemo/: CMakeLists.txt  LUTGenerator.cpp  osgearth_pbrdemo.cpp
src/osgEarth/: CMakeLists.txt  CesiumIon.cpp  DrawInstanced.cpp  EarthManipulator.cpp  FeatureRasterizer.cpp  GDAL.cpp  HTTPClient.cpp  ModelLayer.cpp  OGRFeatureSource.cpp  PBRMaterial  ShaderFactory.cpp  Shaders  Shaders.cpp.in  ShadowCaster.glsl  SimplePager  SimplePager.cpp  TDTiles  TDTiles.cpp  TMS.cpp
src/osgEarth/ImGui/: EnvironmentGUI  EphemerisGUI
src/osgEarthBuildings/: Analyzer.cpp  Building.cpp  BuildingCatalog.cpp  BuildingCompiler.cpp  BuildingFactory.cpp  BuildingLayer  BuildingLayer.cpp  BuildingLayerOptions  BuildingPager  BuildingPager.cpp  CMakeLists.txt  CompilerOutput  CompilerOutput.cpp  Elevation  Elevation.cpp  ElevationCompiler.cpp  ElevationsLodNode  ElevationsLodNode.cpp  ExternalModelNode  ExternalModelNode.cpp  FeaturePlugin.cpp  InstancedModelNode  Parapet  Parapet.cpp
src/osgEarthDrivers/basis/: CMakeLists.txt
src/osgEarthDrivers/detail/: Detail.frag.glsl  DetailTerrainEffect.cpp
src/osgEarthDrivers/gltf/: CMakeLists.txt  GLTFReader.h  ReaderWriterGLTF.cpp
src/osgEarthDrivers/sky_simple/: BrunetonImpl  BrunetonImpl.cpp  SimpleSky.Ground.ONeil.frag.glsl  SimpleSkyNode.cpp  SimpleSkyOptions  eb_function_shaders.cpp  eb_osgearth_shaders.cpp
src/osgEarthPBR/: CMakeLists.txt  Export  GLTFReader.h  PBRMaterial.cpp  PBRMaterial.h  ReaderWriterGLTF.cpp
src/osgEarthSplat/: CMakeLists.txt  ColorSplatLayer  ColorSplatLayer.cpp  GrassLayer.cpp  GroundCoverLayer  GroundCoverLayer.cpp  Splat.Color.common.glsl  Splat.Color.glsl  Splat.Grass.glsl  Splat.GroundCover.Billboard.glsl  Splat.frag.glsl  Splat.util.glsl  SplatLayer  SplatLayer.cpp  SplatShaders  SplatShaders.cpp.in
tests/: feature_draped_polygons.earth
